fixes spacing between list items

--- a/wp-content/themes/purdue-cru/style.css
+++ b/wp-content/themes/purdue-cru/style.css
@@ -569,6 +569,7 @@ a:active {
 .main-navigation li {
 	float: left;
 	position: relative;
+  margin: 0 9px;
 }
 
 .main-navigation a {
